<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:background="@color/primary_material_light"
    android:gravity="center"
    android:orientation="vertical">


    <TextView
        android:id="@+id/textView"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_gravity="center_horizontal"
        android:layout_marginBottom="@dimen/margin_medium"
        android:layout_marginTop="@dimen/margin_large"
        android:text="@string/about_title"
        android:textAppearance="?android:attr/textAppearanceMedium"
        android:textColor="@color/text_dark" />

    <LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
        android:layout_width="match_parent"
        android:layout_height="match_parent"
        android:background="@color/primary_material_light"
        android:gravity="center"
        android:orientation="horizontal">

        <TextView
            android:id="@+id/textView1"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_gravity="center_horizontal"
            android:text="@string/about_version"
            android:textAppearance="?android:attr/textAppearanceSmall"
            android:textColor="@color/text_dark" />

        <TextView
            android:id="@+id/textView2"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_gravity="center_horizontal"
            android:layout_marginLeft="6dp"
            android:text="@string/versionName"
            android:textAppearance="?android:attr/textAppearanceSmall"
            android:textColor="@color/text_dark" />

    </LinearLayout>

    <TextView
        android:id="@+id/textView3"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_gravity="center_horizontal"
        android:layout_marginTop="25dp"
        android:text="@string/about_copyright_l1"
        android:textAppearance="?android:attr/textAppearanceSmall"
        android:textColor="@color/text_dark" />

    <TextView
        android:id="@+id/textView4"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_gravity="center_horizontal"
        android:layout_marginBottom="@dimen/margin_large"
        android:paddingLeft="@dimen/margin_medium"
        android:paddingRight="@dimen/margin_medium"
        android:text="@string/about_copyright_l2"
        android:textAppearance="?android:attr/textAppearanceSmall"
        android:textColor="@color/text_dark" />
</LinearLayout>